--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
-  "name": "my-v0-project",
+  "name": "portfolio_webpage",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Dayoung331.github.io/portfolio_webpage",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d out"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
@@ -66,6 +69,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "gh-pages": "^6.3.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
